[gd_scene load_steps=4 format=2]

[ext_resource path="res://SFX/landingShort.wav" type="AudioStream" id=1]
[ext_resource path="res://Player/SFXHandler.gd" type="Script" id=2]
[ext_resource path="res://SFX/walking.wav" type="AudioStream" id=3]

[node name="SFXHandler" type="Node"]
script = ExtResource( 2 )

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.097

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
volume_db = -11.107

[node name="WalkSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.097
pitch_scale = 0.23

[node name="LandSFX" type="AudioStreamPlayer" parent="."]
